--- a/sbs-landing/package.json
+++ b/sbs-landing/package.json
@@ -24,22 +24,23 @@
     "author": "Dr. Mohamed El Fadil",
     "license": "MIT",
     "dependencies": {
-        "axios": "^1.13.2",
-        "body-parser": "^1.20.2",
+        "axios": "^1.7.9",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "express-rate-limit": "^7.1.5",
-        "helmet": "^7.1.0",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "express-rate-limit": "^7.5.0",
+        "helmet": "^8.0.0",
         "multer": "^1.4.5-lts.1",
-        "pdfkit": "^0.17.1",
+        "pdfkit": "^0.16.0",
         "qs": "^6.14.1",
-        "uuid": "^9.0.1"
+        "uuid": "^11.0.5"
     },
     "devDependencies": {
-        "eslint": "^8.54.0",
-        "nodemon": "^3.0.2",
-        "prettier": "^3.1.1"
+        "eslint": "^9.18.0",
+        "nodemon": "^3.1.9",
+        "playwright": "^1.50.0",
+        "prettier": "^3.4.2"
     },
     "engines": {
         "node": ">=18.0.0",
