--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,3 +1,10 @@
-pytest==7.4.3
-requests==2.32.4
-pytest-cov==4.1.0
+pytest==8.3.4
+requests==2.32.3
+pytest-cov==6.0.0
+pytest-asyncio==0.25.2
+playwright==1.49.1
+pytest-playwright==0.6.2
+pytest-html==4.1.1
+pytest-timeout==2.3.1
+httpx==0.28.1
+faker==33.3.1
